--- a/nice-style.css
+++ b/nice-style.css
@@ -41,7 +41,7 @@ hr, hr + br, div + br, center + br, span + br, ul + br, ol + br, pre + br
 div.info + br { display:block}
 
 .codepre br + br { display: none }
-h1 + pre { margin-bottom:1.375em} /* Toplevel module description */
+h1 { margin-bottom:1.375em} /* Toplevel module description */
 
 /* Sections and document divisions */
 
